# 990_beacon

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: c37ee143411a_initial_schema.py
backend/app/: cli.py  cli_client.py  main.py
backend/app/api/: health.py  organizations.py  search.py  usage.py  users.py  webhooks.py
backend/app/core/: config.py  database.py  deps.py
backend/app/models/: __init__.py  analytics.py  base.py  organization.py  user.py  watchlist.py
backend/app/schemas/: organization.py  profile.py  usage.py  user.py
backend/app/services/: profile.py  search.py  usage.py
backend/scripts/: seed.py
backend/scripts/ingest/: __main__.py  config.py  downloader.py  index_downloader.py  loader.py  pipeline.py  xml_parser.py
backend/tests/: conftest.py  factories.py  test_computed_metrics.py  test_cors.py  test_database.py  test_health.py  test_organizations.py  test_search.py  test_seed.py  test_setup.py  test_usage.py  test_users.py  test_webhooks.py
backend/tests/cli/: test_cli.py
backend/tests/ingest/: test_index_downloader.py  test_loader.py  test_xml_parser.py
backend/tests/ingest/fixtures/: form_990_2014plus.xml  form_990_missing_fields.xml  form_990_pre2014.xml  form_990ez_2014plus.xml  form_990ez_missing_fields.xml  form_990ez_pre2014.xml  form_990pf_2014plus.xml  form_990pf_missing_fields.xml  form_990pf_pre2014.xml
docs/: PRD.md
frontend/: .env.example  instrumentation-client.ts  next.config.ts  (+4 more)
(+42 files in other folders)
